--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "602670e1-3a1d-4407-bff1-ee85eb6ed9ab"
 authors = ["TEC <git@tecosaur.net>"]
 version = "0.1.0"
 
+[deps]
+StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
+
 [compat]
-julia = "1.6"
+StyledStrings = "1.11.0"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
